# minis-hackathon

./: .gitignore  ADR_001_UNIFIED_GRAPH_MEMORY.md  CLAUDE.md  DEPLOY.md  README.md  brain_architecture_proposal.md  mise.toml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  cli.py  entrypoint.sh  fly.toml  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 23384e5bf831_add_cascade_delete_to_ingestion_data_.py  397e6051c9ce_initial_schema.py  a1b2c3d4e5f6_remove_refresh_tokens_and_legacy_auth.py
backend/app/: db.py  main.py
backend/app/core/: access.py  agent.py  alerts.py  audit.py  auth.py  config.py  encryption.py  guardrails.py  llm.py  pricing.py  rate_limit.py
backend/app/ingestion/: formatter.py  github.py
backend/app/middleware/: fingerprint.py  ip_rate_limit.py
backend/app/models/: context.py  ingestion_data.py  knowledge.py  mini.py  org.py  rate_limit.py  revision.py  schemas.py  team.py  usage.py  user.py  user_settings.py
backend/app/plugins/: __init__.py  base.py  loader.py  registry.py
backend/app/routes/: auth.py  chat.py  export.py  minis.py  orgs.py  settings.py  team_chat.py  teams.py  upload.py  usage.py
backend/app/synthesis/: chief.py  context_synthesizer.py  memory.py  memory_assembler.py  spirit.py  (+3 more)
backend/scripts/: push_claude_data.py
backend/tests/: conftest.py  test_agent.py  test_formatter.py  test_memory_assembler.py
github-app/: .dockerignore  .env.production.example  Dockerfile  README.md  pyproject.toml
github-app/app/: config.py  github_api.py  main.py  review.py  webhooks.py
(+76 files in other folders)
