[project]
name = "minis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.6",
    "httpx>=0.28.1",
    "litellm>=1.81.9",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
]
